team images returned temporarily

--- a/about-us.html
+++ b/about-us.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AMTECH-BJ About Us</title>
+  <title>About AMTECH-BJ</title>
   <link rel="stylesheet" href="css/components.css">
   <link rel="stylesheet" href="css/icons.css">
   <link rel="stylesheet" href="css/responsee.css">
   <link rel="stylesheet" href="owl-carousel/owl.carousel.css">
   <link rel="stylesheet" href="owl-carousel/owl.theme.css">
+
+
   <!-- CUSTOM STYLE -->
   <link rel="stylesheet" href="css/template-style.css">
   <link href="https://fonts.googleapis.com/css?family=Barlow:100,300,400,700,800&amp;subset=latin-ext" rel="stylesheet">
@@ -67,18 +69,31 @@
     <section class="grid">
       <div class="m-12 l-6 padding-2x background-white">
         <h2 class="text-dark">Our Vision</h2>
-        <p>Our vision is to help 500 african startup businesses to reach their desired goal by 2030. We are a team of
-          young and dynamic professionals with a passion for leveraging technology to solve problems. We are committed
-          to helping businesses, government and not for profit organizations to achieve their goals through the use of
-          AI technologies.</p>
-        <br><br></p>
-        <h2 class="text-dark">Our Mission</h2>
-        <p> Our Mission is to help businesses, government and not for profit organizations to achieve their goals
-          through the use of AI technologies. We are a team of young and dynamic professionals with a passion for
-          leveraging technology to solve problems. We are committed to helping businesses, government and not for profit
-          organizations to achieve their goals through the use of AI technologies.</p>
+        <p>To empower 500 African startups to achieve their full potential by 2030 through cutting-edge AI-driven
+          solutions, business automation, and data intelligence. We believe that technology is the key to unlocking
+          sustainable growth, innovation, and economic transformation across Africa. Our goal is to create a future
+          where startups and businesses thrive, leveraging the power of Artificial Intelligence, Data Science, and
+          Business Automation to scale and compete globally.</p>
         <br><br>
-        </p>
+        <h2 class="text-dark">Our Mission</h2>
+        <p> We are a team of young, dynamic professionals committed to leveraging technology to solve complex business
+          challenges. Our mission is to: </p>
+        <ul>
+          <li>Support startups, businesses, governments, and nonprofit organizations in achieving their strategic goals
+            through
+            AI-powered solutions.</li>
+          <li>Transform traditional business operations by implementing automation, data analytics, and geospatial
+            intelligence to
+            improve efficiency and profitability.</li>
+          <li>Foster innovation and digital transformation by equipping organizations with smart tools that drive
+            growth,
+            productivity, and competitive advantage.</li>
+          <li>Bridge the gap between technology and business needs, ensuring that African enterprises are not left
+            behind in the era
+            of AI and automation.</li>
+        </ul>
+        <br><br>
+
       </div>
 
       <!-- Image-->
@@ -111,7 +126,7 @@
       <div class="s-12 m-6 l-3">
         <span class="timer text-size-50 text-white text-strong">50,000+</span><span
           class="text-size-50 text-white text-strong">USD</span>
-        <h3 class="text-uppercase text-strong">Grants For Starups</h3>
+        <h3 class="text-uppercase text-strong">Won for Starups</h3>
         <p class="text-size-16 margin-m-bottom-20">Empowering small businesses to scale.
         </p>
       </div>
@@ -178,9 +193,9 @@
 
     <div class="s-12 m-9 l-3 padding-2x margin-bottom background-dark">
       <h2 class="text-strong text-uppercase">Contact Us</h2>
-      <p><b class="text-primary margin-right-10">P</b>+2290191134672</p>
+      <p><b class="text-primary margin-right-10">P</b>+229 01 91 13 46 72</p>
       <p><b class="text-primary margin-right-10">M</b> <a class="text-primary-hover"
-          href="mailto:contact@sampledomain.com">amtechbenin+contact@gmail.com</a></p>
+          href="mailto:amtechbenin@gmail.com">Our E-mail</a></p>
       <!-- <p><b class="text-primary margin-right-10">M</b> <a class="text-primary-hover"
           href="mailto:office@sampledomain.com">office@sampledomain.com</a></p> -->
     </div>
