--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     <nav class="s-12 grid background-none background-primary-hightlight">
       <!-- logo -->
       <a href="index.html" class="m-12 l-3 padding-2x logo">
-        <img src="img/logo3.png" alt="Amtech-BJ" class="full-img right" />
+        <img src="img/logo3.png" alt="Amtech-BJ" />
       </a>
       <div class="top-nav s-12 l-9">
         <ul class="top-ul right chevron background-primary-hightlight">
@@ -71,9 +71,9 @@
           <p>50m du gudron Aidegnon-Tokan</p>
           <p>Abomey-Calavi, Benin Republic.</p>
 
-          <h2 class="text-size-20 margin-top-30 margin-bottom-10 text-strong text-uppercase text-dark">E-mail</h2>
-          <p><a class="text-primary-hover" href="mailto:contact@sampledomain.com">contact@sampledomain.com</a></p>
-          <p><a class="text-primary-hover" href="mailto:office@sampledomain.com">office@sampledomain.com</a></p>
+          <h2 class="text-size-20 margin-top-30 margin-bottom-10 text-strong text-uppercase text-dark">e-mail</h2>
+          <p><a class="text-primary-hover" href="mailto:amtechbenin@gmail.com">contact@amtechbenin.com</a></p>
+          <!-- <p><a class="text-primary-hover" href="mailto:office@sampledomain.com">office@sampledomain.com</a></p> -->
 
           <h2 class="text-size-20 margin-top-30 margin-bottom-10 text-strong text-uppercase text-dark">Phone Numbers
           </h2>
@@ -113,9 +113,9 @@
 
     <div class="s-12 m-9 l-3 padding-2x margin-bottom background-dark">
       <h2 class="text-strong text-uppercase">Contact Us</h2>
-      <p><b class="text-primary margin-right-10">P</b>+229 01 91134676</p>
+      <p><b class="text-primary margin-right-10">P</b>+229 01 91 13 46 76</p>
       <p><b class="text-primary margin-right-10">M</b> <a class="text-primary-hover"
-          href="mailto:contact@sampledomain.com">amtechbenin+contact@gmail.com</a></p>
+          href="mailto:amtechbenin@gmail.com">E-mail Us</a></p>
       <!-- <p><b class="text-primary margin-right-10">M</b><a class="text-primary-hover"
           href="mailto:office@sampledomain.com">office@sampledomain.com</a></p> -->
     </div>
