--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
       <nav class="s-12 grid background-none background-primary-hightlight">
          <!-- logo -->
          <a href="index.html" class="m-12 l-3 padding-2x logo">
-            <img src="img/Logo3.png" alt="Amtech-BJ" class="full-img right" />
+            <img src="img/logo3.png" alt="Amtech-BJ"/>
          </a>
          <div class="top-nav s-12 l-9">
             <ul class="top-ul right chevron">
@@ -99,11 +99,11 @@
 
       <div class="s-12 m-9 l-3 padding-2x margin-bottom background-dark">
          <h2 class="text-strong text-uppercase">Contact Us</h2>
-         <p><b class="text-primary margin-right-10">P</b> 0800 4521 800 50</p>
+         <p><b class="text-primary margin-right-10">P</b>+229 01 91 13 46 72</p>
          <p><b class="text-primary margin-right-10">M</b> <a class="text-primary-hover"
-               href="mailto:contact@sampledomain.com">contact@sampledomain.com</a></p>
-         <p><b class="text-primary margin-right-10">M</b> <a class="text-primary-hover"
-               href="mailto:office@sampledomain.com">office@sampledomain.com</a></p>
+               href="mailto:amtechbenin@gmail.com">Our E-mail</a></p>
+         <!-- <p><b class="text-primary margin-right-10">M</b> <a class="text-primary-hover"
+               href="mailto:office@sampledomain.com">office@sampledomain.com</a></p> -->
       </div>
 
       <!-- Footer - bottom -->
