--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         In 2019, when the world was forced to pause during the COVID-19 lockdown, we saw an opportunity to build
         something transformative. While businesses struggled, we envisioned a future where business automation, data
         science,
-        and AI could become powerful solutions to everyday business challenges.
+        and AI could become powerful solutions to everyday business challenges
 
         What started as an idea in uncertain times has now grown into a leading force in business automation and
         AI-driven solutions. Through dedication, innovation, and an unwavering belief in the power of technology, we’ve
@@ -134,7 +134,7 @@
         operations, entrepreneurs who have gained data-driven insights, and industries that have embraced automation,
         AI, and geospatial intelligence to stay ahead.
 
-        So, what’s stopping you? Let us help you redefine success by automating your business processes, optimizing
+        So, whats stopping you? Let us help you redefine success by automating your business processes, optimizing
         your strategy, and unlocking new growth opportunities. The future of business is digital—let’s build it
         together!
       </p>
@@ -226,14 +226,14 @@
       <h2 class="text-strong text-uppercase">Contact Us</h2>
       <p><b class="text-primary margin-right-10">P</b>+229 01 91 13 46 72</p>
       <p><b class="text-primary margin-right-10">M</b> <a class="text-primary-hover"
-          href="mailto:contact@sampledomain.com">amtechbenin+contact@gmail.com</a></p>
+          href="mailto:amtechbenin@gmail.com">Our E-mail</a></p>
       <!-- <p><b class="text-primary margin-right-10">M</b> <a class="text-primary-hover"
           href="mailto:office@sampledomain.com">office@sampledomain.com</a></p> -->
     </div>
 
     <!-- Footer - bottom -->
     <div class="s-12 text-center margin-bottom">
-      <p class="text-size-12">&copy; Copyright 2025, AMTECH-BJ</p>
+      <p class="text-size-12">&copy;AMTECH-BJ, 2025</p>
       <!-- <p class="text-size-12">All images have been purchased from Bigstock. Do not use the images in your website.</p> -->
       <!-- <p><a class="text-size-12 text-primary-hover" href="http://www.myresponsee.com" title="Responsee - lightweight responsive framework">Design and coding by Responsee Team</a></p> -->
     </div>
