--- a/services.html
+++ b/services.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="css/responsee.css">
   <link rel="stylesheet" href="owl-carousel/owl.carousel.css">
   <link rel="stylesheet" href="owl-carousel/owl.theme.css">
+
+
   <!-- CUSTOM STYLE -->
   <link rel="stylesheet" href="css/template-style.css">
   <link href="https://fonts.googleapis.com/css?family=Barlow:100,300,400,700,800&amp;subset=latin-ext" rel="stylesheet">
@@ -57,9 +59,9 @@
       <div class="s-12 padding-2x">
         <h1 class="text-strong text-white text-center center text-size-60 text-uppercase margin-bottom-20">Our Services
         </h1>
-        <p class="text-size-20 text-white text-center center text-uppercase">AI Automation Data Analytics
+        <!-- <p class="text-size-20 text-white text-center center text-uppercase">AI Automation Data Analytics
           | Business
-          Planning</p>
+          Planning</p> -->
       </div>
     </header>
 
@@ -67,17 +69,36 @@
     <!-- SECTION 1 -->
     <section class="grid">
       <div class="m-12 l-6 padding-2x background-white">
-        <p class="text-strong text-size-80 text-red">01</p>
+        <p class="text-strong text-size-50 text-red">01</p>
 
-        <h2 class="text-size-50 text-line-height-1 text-dark"><b>AI Automation &amp; Data Analysis/ Management</b></h2>
+        <h2 class="text-size-40 text-line-height-0.7 text-dark"><b>Business Automation</b></h2>
 
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
-          dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-          nonummy.</p>
-        <p>Libero malesuada varius leo mollis laoreet error occaecat unde nostra harum. A morbi hymenaeos rhoncus
-          ridiculus temporibus consectetur ducimus exercitation. Integer arcu adipiscing augue iusto nam duis facilisi
-          senectus iaculis proin repudiandae nemo cupidatat. Ipsum donec enim leo ultricies pulvinar aute semper dolores
-          habitant impedit harum. </p>
+        <p>In today’s fast-paced world, efficiency is the key to success. Our Business Automation services help
+          organizations
+          streamline operations, reduce manual workload, and enhance productivity using cutting-edge AI-driven solutions
+          and smart
+          technology.</p>
+        <br>
+        <p>What We Offer:</p>
+        <ul>
+          <li>Business Process Automation</li>
+          <li>Workflow Automation</li>
+          <li>Document Management</li>
+          <li>Customer Relationship Management (CRM)</li>
+          <li>Enterprise Resource Planning (ERP)</li>
+          <li>Supply Chain Management</li>
+          <li>Inventory Management</li>
+          <li>Human Resource Management</li>
+          <li>Project Management</li>
+          <li>Business Intelligence</li>
+          <li>Big Data Analytics</li>
+          <li>Machine Learning</li>
+          <li>Artificial Intelligence</li>
+          <li>Robotic Process Automation</li>
+          <li>Chatbots</li>
+          <li>Virtual Assistants</li>
+          <li>And more...</li>
+        </ul>
       </div>
 
       <!-- Image-->
@@ -90,36 +111,77 @@
       <img class="m-12 l-6" src="img/img-01.jpg">
 
       <div class="m-12 l-6 padding-2x background-dark">
-        <p class="text-strong text-size-80 text-red">02</p>
+        <p class="text-strong text-size-50 text-red">02</p>
 
-        <h2 class="text-size-50 text-line-height-1 margin-bottom-30 text-white"><b>Libero malesuada varius leo mollis
-            tincidunt</b></h2>
+        <h2 class="text-size-30 text-line-height-0.7 margin-bottom-30 text-white"><b>Data Science and Analysis
+            Services</b></h2>
 
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
-          dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-          nonummy.</p>
-        <p>Libero malesuada varius leo mollis laoreet error occaecat unde nostra harum. A morbi hymenaeos rhoncus
-          ridiculus temporibus consectetur ducimus exercitation. Integer arcu adipiscing augue iusto nam duis facilisi
-          senectus iaculis proin repudiandae nemo cupidatat. Ipsum donec enim leo ultricies pulvinar aute semper dolores
-          habitant impedit harum. </p>
+        <p>In the digital age, data is the new gold—but only if you know how to use it. Our Data Science &amp; Analytics
+          services help
+          businesses turn raw data into actionable insights, driving smarter decision-making, improved efficiency, and
+          increased
+          profitability.
+        </p>
+        <br>
+        <p>Our team of data scientists, analysts, and engineers will work with you to develop custom solutions that
+          leverage
+          advanced analytics, machine learning, and artificial intelligence to unlock the full potential of your data.
+          Whether you're looking to optimize operations, improve customer experience, or drive innovation, our Data
+          Science &amp; Analytics services can help you achieve your goals.</p>
+        <br>
+        Our services include:
+        <ul>
+          <li>Data Analysis</li>
+          <li>Data Visualization</li>
+          <li>Descriptive Analytics</li>
+          <li>Predictive Analytics</li>
+          <li>Prescriptive Analytics</li>
+          <li>Diagnostic Analytics</li>
+          <li>Big Data Analytics</li>
+          <li>Machine Learning</li>
+          <li>Artificial Intelligence</li>
+          <li>Deep Learning</li>
+          <li>Natural Language Processing</li>
+          <li>Computer Vision</li>
+          <li>Recommendation Systems</li>
+          <li>And more...</li>
+        </ul>
+        <br>
+
       </div>
     </section>
 
     <!-- SECTION 3 -->
     <section class="grid">
       <div class="m-12 l-6 padding-2x background-aqua">
-        <p class="text-strong text-size-80 text-white">03</p>
+        <p class="text-strong text-size-50 text-white">03</p>
 
-        <h2 class="text-size-50 text-line-height-1 text-white"><b>Morbi hymenaeos rhoncus ridiculus</b></h2>
+        <h2 class="text-size-30 text-line-height-1 text-white"><b>Business Planning &amp; Financial Modelling</b></h2>
 
-        <h3>Nonummy nibh euismod tincidunt ut laoreet</h3>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
-          dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-          nonummy.</p>
-        <p>Libero malesuada varius leo mollis laoreet error occaecat unde nostra harum. A morbi hymenaeos rhoncus
-          ridiculus temporibus consectetur ducimus exercitation. Integer arcu adipiscing augue iusto nam duis facilisi
-          senectus iaculis proin repudiandae nemo cupidatat. Ipsum donec enim leo ultricies pulvinar aute semper dolores
-          habitant impedit harum. </p>
+        <h3>Nothing motivates investors like a well crafted <b>Business Plan</b> and a <b>Pitch Deck </b></h3>
+        <p>Turning a great idea into a successful business requires strategic planning and financial foresight.
+          Our Business Planning &amp; Financial Modelling services are designed to help startups, SMEs, and large
+          enterprises build a
+          solid foundation for growth, scalability,
+          and long-term success.</p>
+        <p>Our team of experts will work with you to develop a comprehensive business plan that outlines your goals,
+          objectives, and strategies for achieving success. We will also help you create detailed financial models that
+          project your company's future performance and identify potential risks and opportunities.</p>
+        <p>Whether you're looking to secure funding, attract investors, or simply grow your business, our Business
+          Planning &amp;
+          Financial Modelling services can help you achieve your goals.</p>
+        <br>
+        Our services include:
+        <ul>
+          <li>Business Planning</li>
+          <li>Financial Modelling</li>
+          <li>Market Research</li>
+          <li>Competitor Analysis</li>
+          <li>SWOT Analysis</li>
+          <li>Financial Forecasting</li>
+          <li>Investment Analysis</li>
+          <li>Valuation</li>
+        </ul>
       </div>
 
       <!-- Image-->
@@ -155,9 +217,9 @@
 
     <div class="s-12 m-9 l-3 padding-2x margin-bottom background-dark">
       <h2 class="text-strong text-uppercase">Contact Us</h2>
-      <p><b class="text-primary margin-right-10">P</b> 0800 4521 800 50</p>
+      <p><b class="text-primary margin-right-10">P</b>+229 01 91 13 46 72</p>
       <p><b class="text-primary margin-right-10">M</b> <a class="text-primary-hover"
-          href="mailto:contact@sampledomain.com">contact@sampledomain.com</a></p>
+          href="mailto:amtechbenin@gmail.com">Our Email</a></p>
       <p><b class="text-primary margin-right-10">M</b> <a class="text-primary-hover"
           href="mailto:office@sampledomain.com">office@sampledomain.com</a></p>
     </div>
