--- a/about-us.html
+++ b/about-us.html
@@ -38,7 +38,7 @@
     <nav class="s-12 grid background-none background-primary-hightlight">
       <!-- logo -->
       <a href="index.html" class="m-12 l-3 padding-2x logo">
-        <img src="img/logo3.png" alt="Amtech-BJ" class="full-img right" />
+        <img src="img/logo3.png" alt="Amtech-BJ" />
       </a>
       <div class="top-nav s-12 l-9">
         <ul class="top-ul right chevron">
