Who we are section of the services.html page

--- a/index.html
+++ b/index.html
@@ -211,8 +211,7 @@
     <div class="s-12 m-9 l-3 padding-2x margin-bottom background-dark">
       <h2 class="text-strong text-uppercase">Who We Are?</h2>
       <p>We are tech startup laden the task of helping businesses, government and not for profit organizations to
-        achieve their goals
-        through the use of AI technologies. We are a team of young and dynamic professionals with a passion for
+        achieve their goals through the use of AI technologies. We are a team of young and dynamic professionals with a passion for
         technology.</p>
 
     </div>
