--- a/services.html
+++ b/services.html
@@ -205,9 +205,9 @@
 
     <div class="s-12 m-9 l-3 padding-2x margin-bottom background-dark">
       <h2 class="text-strong text-uppercase">Who We Are?</h2>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
-        dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.
-      </p>
+      <p>A tech startup laden the task of helping businesses, government and not for profit organizations to achieve
+        their
+        goals through the use of cutting-edge technology and innovative solutions.</p>
     </div>
 
     <div class="s-12 m-9 l-3 padding-2x margin-bottom background-dark">
