team image size adjustment

--- a/about-us.html
+++ b/about-us.html
@@ -143,29 +143,29 @@
         <p class="margin-bottom-10 text-primary text-uppercase">Founder/CEO</p>
       </div>
       <div class="s-12 m-6 l-2 margin-bottom">
-        <img src="img/team-02.jpg" />
+        <img src="img/img-05-copy.jpg" />
         <h4 class="background-primary padding text-strong">Jane Naismith</h4>
-        <p class="margin-bottom-10 text-primary text-uppercase">Graphic Designer</p>
+        <p class="margin-bottom-10 text-white text-uppercase">Graphic Designer</p>
       </div>
       <div class="s-12 m-6 l-2 margin-bottom">
         <img src="img/team-03.jpg" />
         <h4 class="background-primary padding text-strong">Mark Stoner</h4>
-        <p class="margin-bottom-10 text-primary text-uppercase">Web Designer</p>
+        <p class="margin-bottom-10 text-white text-uppercase">Web Developer</p>
       </div>
       <div class="s-12 m-6 l-2 margin-bottom">
-        <img src="img/team-04.jpg" />
-        <h4 class="background-primary padding text-strong">Steve Carpenter</h4>
-        <p class="margin-bottom-10 text-primary text-uppercase">Web Developer</p>
+        <img src="img/team-04b.jpg" />
+        <h4 class="background-primary padding text-strong">Steph Carpenter</h4>
+        <p class="margin-bottom-10 text-blue text-uppercase">Data Scientist Developer</p>
       </div>
       <div class="s-12 m-6 l-2 margin-bottom">
-        <img src="img/team-05.jpg" />
+        <img src="img/img-01-Copy.jpg" />
         <h4 class="background-primary padding text-strong">Steff Kingston</h4>
-        <p class="margin-bottom-10 text-primary text-uppercase">Account Manager</p>
+        <p class="margin-bottom-10 text-aqua text-uppercase">AI/ML Engineer</p>
       </div>
       <div class="s-12 m-6 l-2 margin-bottom">
         <img src="img/team-06.jpg" />
         <h4 class="background-primary padding text-strong">John Sandman</h4>
-        <p class="margin-bottom-10 text-primary text-uppercase">Account Manager</p>
+        <p class="margin-bottom-10 text-blue text-uppercase">Finance Officer</p>
       </div>
     </section>
 
