adjustment on the ages: email a

--- a/about-us.html
+++ b/about-us.html
@@ -144,7 +144,7 @@
       </div>
       <div class="s-12 m-6 l-2 margin-bottom">
         <img src="img/img-05-copy.jpg" />
-        <h4 class="background-primary padding text-strong">Jane Naismith</h4>
+        <h4 class="background-primary padding text-strong">Jane Naismith</h4>`
         <p class="margin-bottom-10 text-white text-uppercase">Graphic Designer</p>
       </div>
       <div class="s-12 m-6 l-2 margin-bottom">
