--- a/services.html
+++ b/services.html
@@ -220,8 +220,8 @@
       <p><b class="text-primary margin-right-10">P</b>+229 01 91 13 46 72</p>
       <p><b class="text-primary margin-right-10">M</b> <a class="text-primary-hover"
           href="mailto:amtechbenin@gmail.com">Our Email</a></p>
-      <p><b class="text-primary margin-right-10">M</b> <a class="text-primary-hover"
-          href="mailto:office@sampledomain.com">office@sampledomain.com</a></p>
+      <!-- <p><b class="text-primary margin-right-10">M</b> <a class="text-primary-hover"
+          href="mailto:office@sampledomain.com">office@sampledomain.com</a></p> -->
     </div>
 
     <!-- Footer - bottom -->
