--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link href="https://fonts.googleapis.com/css?family=Barlow:100,300,400,700,800&amp;subset=latin-ext" rel="stylesheet">
   <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
   <script type="text/javascript" src="js/jquery-ui.min.js"></script>
+
+  <meta name="google-site-verification" content="TT99swVyAaTmbu3enDT-qkGOOGJSKoSv-COKbe0NN3U" />
 </head>
 
 <!--
